--- a/atom/atom/symlinks/styles.less
+++ b/atom/atom/symlinks/styles.less
@@ -17,16 +17,48 @@
 
 // style the background color of the tree view
 .tree-view {
-  // background-color: whitesmoke;
+  background-color: hsl(180, 24%, 12%);
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
-  // color: white;
-  // background-color: hsl(180, 24%, 12%);
 }
 
 // To style other content in the text editor's shadow DOM, use the ::shadow expression
 atom-text-editor::shadow .cursor {
-  // border-color: red;
+}
+
+atom-text-editor {
+  font-family: 'Fira Code';
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+  background-color: hsl(180, 24%, 12%);
+}
+
+atom-text-editor::shadow {
+  .string.quoted,
+  .string.regexp {
+    -webkit-font-feature-settings: "liga" off, "calt" off;
+  }
+  .source.js.jsx .keyword.control.flow,
+  .source.js.jsx .entity.other.attribute-name,
+  .source.ruby .keyword.control.start-block,
+  .source.ruby .keyword.control.def,
+  .source.ruby .keyword.control.class,
+  .storage, .type .function {
+    vertical-align: baseline;
+    font-family: 'flottflott';
+    height: inherit;
+    font-size: 1.6em;
+    line-height: 1rem;
+  }
+  .source.js.jsx,
+  .storage.type.function.arrow.js,
+  .variable {
+    font-family: 'Fira Code';
+    font-style: normal;
+  }
+  .entity.name {
+    font-weight: bold;
+  }
 }
