Current atom line number yellow

--- a/atom/atom/symlinks/styles.less
+++ b/atom/atom/symlinks/styles.less
@@ -36,6 +36,9 @@ atom-text-editor {
 }
 
 atom-text-editor::shadow {
+  .line-number.cursor-line {
+    color: yellow;
+  }
   .string.quoted,
   .string.regexp {
     -webkit-font-feature-settings: "liga" off, "calt" off;
