--- a/atom/atom/symlinks/styles.less
+++ b/atom/atom/symlinks/styles.less
@@ -44,16 +44,15 @@ atom-text-editor::shadow {
     -webkit-font-feature-settings: "liga" off, "calt" off;
   }
   .source.js.jsx .keyword.control.flow,
+  .source.js.jsx .keyword.control.module,
   .source.js.jsx .entity.other.attribute-name,
   .source.ruby .keyword.control.start-block,
   .source.ruby .keyword.control.def,
   .source.ruby .keyword.control.class,
   .storage, .type .function {
-    vertical-align: baseline;
-    font-family: 'flottflott';
-    height: inherit;
-    font-size: 1.6em;
-    line-height: 1rem;
+    font-family: 'Pacifico';
+    font-size: 1.06em;
+    line-height: 1.26em;
   }
   .source.js.jsx,
   .storage.type.function.arrow.js,
