update atom configs

--- a/atom/atom/symlinks/styles.less
+++ b/atom/atom/symlinks/styles.less
@@ -16,28 +16,28 @@
  */
 
 // style the background color of the tree view
-.tree-view {
-  background-color: hsl(180, 24%, 12%);
-}
+// .tree-view {
+  // background-color: hsl(180, 24%, 12%);
+// }
 
 // style the background and foreground colors on the atom-text-editor-element itself
-atom-text-editor {
-}
+// atom-text-editor {
+// }
 
 // To style other content in the text editor's shadow DOM, use the ::shadow expression
-atom-text-editor::shadow .cursor {
-}
+// atom-text-editor::shadow .cursor {
+// }
 
 atom-text-editor {
   font-family: 'Fira Code';
   font-style: normal;
   text-rendering: optimizeLegibility;
-  background-color: hsl(180, 24%, 12%);
+// background-color: hsl(180, 24%, 12%);
 }
 
 atom-text-editor::shadow {
   .line-number.cursor-line {
-    color: yellow;
+   color: yellow;
   }
   .string.quoted,
   .string.regexp {
