--- a/atom/atom/symlinks/styles.less
+++ b/atom/atom/symlinks/styles.less
@@ -43,16 +43,15 @@ atom-text-editor::shadow {
   .string.regexp {
     -webkit-font-feature-settings: "liga" off, "calt" off;
   }
-  .source.js.jsx .keyword.control.flow,
-  .source.js.jsx .keyword.control.module,
-  .source.js.jsx .entity.other.attribute-name,
-  .source.ruby .keyword.control.start-block,
-  .source.ruby .keyword.control.def,
-  .source.ruby .keyword.control.class,
-  .storage, .type .function {
-    font-family: 'Pacifico';
-    font-size: 1.06em;
-    line-height: 1.26em;
+  // .source.js.jsx .keyword.control.flow,
+  // .source.js.jsx .keyword.control.module,
+  // .source.js.jsx .entity.other.attribute-name,
+  // .source.ruby .keyword.control.start-block,
+  // .source.ruby .keyword.control.def,
+  // .source.ruby .keyword.control.class,
+  // .storage, .type .function,
+  .syntax--keyword, .syntax--class {
+    font-weight: bold;
   }
   .source.js.jsx,
   .storage.type.function.arrow.js,
